# TevianTest

./: CMakeLists.txt  Dockerfile  README.md  docker-build-and-run.sh  install_deb.sh  make_deb.sh
package/DEBIAN/: control  postinst
src/: AuthWindow.cpp  AuthWindow.h  AuthWindow.ui  ProgressBarWorker.cpp  ProgressBarWorker.h  TevianApiWrapper.cpp  TevianApiWrapper.h  Viewport.cpp  Viewport.h  ViewportWindow.cpp  ViewportWindow.h  ViewportWindow.ui  main.cpp
